@@ -86,7 +86,6 @@ public class JavaBuilder extends ModuleLevelBuilder {
   private static final Key<JavaCompilingTool> COMPILING_TOOL = Key.create("_java_compiling_tool_");
   private static final Key<ConcurrentMap<String, Collection<String>>> COMPILER_USAGE_STATISTICS = Key.create("_java_compiler_usage_stats_");
   private static final List<String> COMPILABLE_EXTENSIONS = Collections.singletonList(JAVA_EXTENSION);
-  private static final String MODULE_DIR_MACRO_TEMPLATE = "$" + PathMacroUtil.MODULE_DIR_MACRO_NAME + "$";
 
   private static final Set<String> FILTERED_OPTIONS = ContainerUtil.newHashSet(
     "-target"
@@ -124,7 +123,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
   public JavaBuilder(Executor tasksExecutor) {
     super(BuilderCategory.TRANSLATOR);
-    myTaskRunner = new SequentialTaskExecutor("JavaBuilder pool", tasksExecutor);
+    myTaskRunner = SequentialTaskExecutor.createSequentialApplicationPoolExecutor("JavaBuilder Pool", tasksExecutor);
     //add here class processors in the sequence they should be executed
   }
 
@@ -249,7 +248,9 @@ public class JavaBuilder extends ModuleLevelBuilder {
     catch (Exception e) {
       LOG.info(e);
       String message = e.getMessage();
-      if (message == null) message = "Internal error: \n" + ExceptionUtil.getThrowableText(e);
+      if (message == null || message.trim().isEmpty()) {
+        message = "Internal error: \n" + ExceptionUtil.getThrowableText(e);
+      }
       context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, message));
       throw new StopBuildException();
     }
@@ -318,24 +319,20 @@ public class JavaBuilder extends ModuleLevelBuilder {
           }
           finally {
             filesWithErrors = diagnosticSink.getFilesWithErrors();
-            // heuristic: incorrect paths data recovery, so that the next make should not contain non-existing sources in 'recompile' list
-            //for (File file : filesWithErrors) {
-            //  if (!file.exists()) {
-            //    FSOperations.markDeleted(context, file);
-            //  }
-            //}
           }
         }
 
         context.checkCanceled();
 
         if (!compiledOk && diagnosticSink.getErrorCount() == 0) {
+          // unexpected exception occurred or compiler did not output any errors for some reason
           diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, "Compilation failed: internal java compiler error"));
         }
+        if (diagnosticSink.getErrorCount() > 0) {
+          diagnosticSink.report(new JpsInfoDiagnostic("Errors occurred while compiling module '" + chunkName + "'"));
+        }
+
         if (!Utils.PROCEED_ON_ERROR_KEY.get(context, Boolean.FALSE) && diagnosticSink.getErrorCount() > 0) {
-          if (!compiledOk) {
-            diagnosticSink.report(new JpsInfoDiagnostic("Errors occurred while compiling module '" + chunkName + "'"));
-          }
           throw new StopBuildException(
             "Compilation failed: errors: " + diagnosticSink.getErrorCount() + "; warnings: " + diagnosticSink.getWarningCount()
           );
@@ -379,7 +376,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
       final String message = validateCycle(context, chunk);
       if (message != null) {
         diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, message));
-        return true;
+        return false;
       }
     }
 
@@ -395,7 +392,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
         if (forkSdk == null) {
           String text = "Cannot start javac process for " + chunk.getName() + ": unknown JDK home path.\nPlease check project configuration.";
           diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, text));
-          return true;
+          return false;
         }
       }
 
@@ -418,7 +415,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
                       " differs from javac's platform (" + System.getProperty("java.version") + ")\n" +
                       "Compilation profiles are not supported for such configuration";
         context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, text));
-        return true;
+        return false;
       }
 
       Collection<File> classPath = originalClassPath;
@@ -476,7 +473,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     final ConcurrentMap<String, Collection<String>> map = COMPILER_USAGE_STATISTICS.get(context);
     Collection<String> names = map.get(compilerName);
     if (names == null) {
-      names = Collections.synchronizedSet(new HashSet<String>());
+      names = Collections.synchronizedSet(new HashSet<>());
       final Collection<String> prev = map.putIfAbsent(compilerName, names);
       if (prev != null) {
         names = prev;
@@ -777,7 +774,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
         //this is a temporary workaround to allow passing per-module compiler options for Eclipse compiler in form
         // -properties $MODULE_DIR$/.settings/org.eclipse.jdt.core.prefs
         final String moduleDirPath = FileUtil.toCanonicalPath(baseDirectory.getAbsolutePath());
-        appender = (strings, option) -> strings.add(StringUtil.replace(option, MODULE_DIR_MACRO_TEMPLATE, moduleDirPath));
+        appender = (strings, option) -> strings.add(StringUtil.replace(option, PathMacroUtil.DEPRECATED_MODULE_DIR, moduleDirPath));
       }
 
       boolean skip = false;
@@ -847,6 +844,13 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
     addCrossCompilationOptions(compilerSdkVersion, options, context, chunk);
 
+    if (!options.contains("--enable-preview")) {
+      LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(chunk.representativeTarget().getModule());
+      if (level != null && level.isPreview()) {
+        options.add("--enable-preview");
+      }
+    }
+
     if (addAnnotationProcessingOptions(options, profile)) {
       final File srcOutput = ProjectPaths.getAnnotationProcessorGeneratedSourcesOutputDir(
         chunk.getModules().iterator().next(), chunk.containsTests(), profile
@@ -902,28 +906,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     final int languageLevel = getLanguageLevel(chunk.representativeTarget().getModule());
     final int chunkSdkVersion = getChunkSdkVersion(chunk);
 
-    int bytecodeTarget = 0;
-    for (JpsModule module : chunk.getModules()) {
-      // use the lower possible target among modules that form the chunk
-      final int moduleTarget = JpsJavaSdkType.parseVersion(compilerConfiguration.getByteCodeTargetLevel(module.getName()));
-      if (moduleTarget > 0 && (bytecodeTarget == 0 || moduleTarget < bytecodeTarget)) {
-        bytecodeTarget = moduleTarget;
-      }
-    }
-    if (bytecodeTarget == 0) {
-      if (languageLevel > 0) {
-        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
-        bytecodeTarget = languageLevel;
-      }
-      else {
-        // last resort and backward compatibility:
-        // check if user explicitly defined bytecode target in additional compiler options
-        String value = USER_DEFINED_BYTECODE_TARGET.get(context);
-        if (value != null) {
-          bytecodeTarget = JpsJavaSdkType.parseVersion(value);
-        }
-      }
-    }
+    int bytecodeTarget = getModuleBytecodeTarget(context, chunk, compilerConfiguration, languageLevel);
 
     if (shouldUseReleaseOption(compilerConfiguration, compilerSdkVersion, chunkSdkVersion, bytecodeTarget)) {
       options.add("--release");
@@ -962,6 +945,36 @@ public class JavaBuilder extends ModuleLevelBuilder {
       options.add("-target");
       options.add(complianceOption(bytecodeTarget));
     }
+  }
+
+  public static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration) {
+    return getModuleBytecodeTarget(context, chunk, compilerConfiguration, getLanguageLevel(chunk.representativeTarget().getModule()));
+  }
+  
+  private static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration, int languageLevel) {
+    int bytecodeTarget = 0;
+    for (JpsModule module : chunk.getModules()) {
+      // use the lower possible target among modules that form the chunk
+      final int moduleTarget = JpsJavaSdkType.parseVersion(compilerConfiguration.getByteCodeTargetLevel(module.getName()));
+      if (moduleTarget > 0 && (bytecodeTarget == 0 || moduleTarget < bytecodeTarget)) {
+        bytecodeTarget = moduleTarget;
+      }
+    }
+    if (bytecodeTarget == 0) {
+      if (languageLevel > 0) {
+        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
+        bytecodeTarget = languageLevel;
+      }
+      else {
+        // last resort and backward compatibility:
+        // check if user explicitly defined bytecode target in additional compiler options
+        String value = USER_DEFINED_BYTECODE_TARGET.get(context);
+        if (value != null) {
+          bytecodeTarget = JpsJavaSdkType.parseVersion(value);
+        }
+      }
+    }
+    return bytecodeTarget;
   }
 
   private static String complianceOption(int major) {
